# SubstAgent

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: gradle.yml
cmake/: gen_build_info.cmake
src/: build_info.h.in  substagent.c
src/main/java/nl/skbotnl/substagent/: BufferedReaderTransformer.java  Hook.java  SubstAgent.java  Transformer.java
tests/: .env  Test1.java  Test10.java  Test11.java  Test12.java  Test13.java  Test14.java  Test2.java  Test3.java  Test4.java  Test5.java  Test6.java  Test7.java  Test8.java  Test9.java  run_tests.sh
tests/data/: test1.txt  test10.txt  test11.txt  test12.txt  test13.nacf  test14.txt  test2.txt  test3.txt  test4.txt  test5.txt  test9.txt
